--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          python-version: ['3.8', '3.9', '3.10']
+          python-version: ['3.8', '3.9', '3.10', '3.11', '3.x']
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v3
