--- a/gui/package.json
+++ b/gui/package.json
@@ -32,15 +32,17 @@
     "@types/react": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
-    "electron": "^18.2.0",
+    "electron": "^19.1.9",
     "electron-builder": "^23.0.3",
     "eslint": "^8.21.0",
     "eslint-config-next": "^12.2.3",
     "eslint-plugin-react": "^7.30.1",
-    "next": "^12.2.3",
-    "nextron": "^8.1.0",
+    "next": "^12.3.4",
+    "nextron": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "json5": "^2.2.3",
+    "loader-utils": "^2.0.3"
   }
 }
